# vgt

./: CMakeLists.txt
ads/: array.c  array.h  array_cls.h  list.c  list.h  list_cls.h  list_element.c  list_element.h  list_element_cls.h  queue.c  queue.h  queue_cls.h  red_black_node.c  red_black_node.h  red_black_node_cls.h  red_black_tree.c  red_black_tree.h  red_black_tree_cls.h  types.h  vector.c  vector.h  vector_cls.h
conf/: hydro.conf  nucleon.conf  sphere.conf
conf/data/: fuel-70.1.off  hydrogenAtom.stub  nucleon-180.off  sphere-250.off
data/: hydro-10.off  hydro-6.off
math/: algorithms.h  frame.c  frame.h  frame_cls.h  mat.c  mat.h  math.c  math.h  mesh.c  mesh.h  mesh_cls.h  obj.c  obj.h  predicates.c  predicates.h  roots3and4.c  roots3and4.h  simplex.c  simplex.h  simplex_cls.h  spherical.h  spherical_cls.h  types.h  vec.c  vec.h  vec_cls.h  vertex.c  vertex.h
test/: test_array.c  test_array_push.c  test_delaunay.c  test_div.c  test_lapl.c  test_list.c  test_marching_tets.c  test_mesh.c  test_random.c  test_scalar_field.c  test_spectrum.c  test_vector.c  test_vector_field.c  test_view.c  test_volumetric_data.c
vgt/: array.c  delaunay.c  delaunay.h  delaunay_cls.h  edge_cls.h  geometry_cls.h  half_edge.c  half_edge.h  half_edge_cls.h  iso.h  list.c  list_cls.h  list_element.c  list_element.h  list_element_cls.h  marching_tets.c  mesh.c  mesh.h  mesh_cls.h  obj.c  obj.h  red_black_node.c  red_black_node.h  red_black_node_cls.h  red_black_tree.c  red_black_tree_cls.h  scalar_field.c  scalar_field.h  scalar_field_cls.h  spectrum.c  spectrum.h  spectrum_cls.h  tet.c  tet.h  tet_cls.h  topology.h  types.h  vec.c  vec.h  vec_cls.h  (+10 more)
view/: .camera.h.swp  .camera_cls.h.swp  .mouse_cls.h.swp  camera.c  camera.h  camera_cls.h  graphics.c  graphics.h  graphics_cls.h  mouse_cls.h  renderer.c  renderer.h  renderer_cls.h  types.h
